[package]
name = "sync"
version = "0.0.1"
authors = []
license = "MIT"
build = "../#common/mkmain.rs"

[lib]
name = "uu_sync"
path = "sync.rs"

[dependencies]
getopts = "0.2.18"
kernel32-sys = "0.2.2"
libc = "0.2.42"
uucore = { version = "0.0.1", features = ["wide"] }
winapi = { version = "0.3", features = ["handleapi", "winerror"] }

[[bin]]
name = "sync"
path = "../#common/uumain.rs"
