[package]
name = "tail"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_tail"
path = "tail.rs"

[dependencies]
getopts = "0.2.18"
kernel32-sys = "0.2.2"
libc = "0.2.42"
winapi = "0.3"
uucore = "0.0.1"

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"

[[bin]]
name = "tail"
path = "../../uumain.rs"
