[package]
name = "timeout"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_timeout"
path = "timeout.rs"

[dependencies]
getopts = "0.2.14"
libc = "0.2.42"
time = "0.1.38"

[dependencies.uucore]
path = "../uucore"
features = ["parse_time", "process"]

[[bin]]
name = "timeout"
path = "../../uumain.rs"
