[package]
name = "touch"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_touch"
path = "touch.rs"

[dependencies]
filetime = "0.2.1"
getopts = "0.2.14"
time = "0.1.38"

[dependencies.uucore]
path = "../uucore"
features = ["libc"]

[[bin]]
name = "touch"
path = "../../uumain.rs"
