[package]
name = "touch"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_touch"
path = "touch.rs"

[dependencies]
filetime = "0.2.7"
getopts = "0.2.18"
time = "0.1.40"

[dependencies.uucore]
version = "0.0.1"
features = ["libc"]

[[bin]]
name = "touch"
path = "../../uumain.rs"
