[package]
name = "touch"
version = "0.0.1"
authors = []
license = "MIT"
build = "../#common/mkmain.rs"

[lib]
name = "uu_touch"
path = "touch.rs"

[dependencies]
filetime = "0.2.1"
getopts = "0.2.18"
time = "0.1.40"
uucore = { version = "0.0.2", features = ["libc"] }

[[bin]]
name = "touch"
path = "../#common/uumain.rs"
