[package]
name = "uname"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_uname"
path = "uname.rs"

[dependencies]
clap = "2.20.0"
platform-info = { git = "https://github.com/uutils/platform-info" }
uucore = { path = "../uucore" }

[[bin]]
name = "uname"
path = "../../uumain.rs"
